--- a/platform/web/src/App.module.scss
+++ b/platform/web/src/App.module.scss
@@ -2,7 +2,7 @@
 	height: 100vh;
 	background-color: var(--semi-color-bg-1);
 	.nav {
-		height: 6v;
+		height: 6vh;
 	}
 	.inner-layout {
 		margin-top: 6vh;
